feat: draft tasks docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,5 +1,7 @@
 {
-	"versions": ["main"],
+	"versions": [
+		"main"
+	],
 	"routes": [
 		{
 			"title": "About",
@@ -210,7 +212,9 @@
 									"title": "JetBrains Toolbox",
 									"description": "Access Coder workspaces from JetBrains Toolbox",
 									"path": "./user-guides/workspace-access/jetbrains/toolbox.md",
-									"state": ["beta"]
+									"state": [
+										"beta"
+									]
 								}
 							]
 						},
@@ -261,13 +265,17 @@
 					"description": "Use Coder Desktop to access your workspace like it's a local machine",
 					"path": "./user-guides/desktop/index.md",
 					"icon_path": "./images/icons/computer-code.svg",
-					"state": ["beta"],
+					"state": [
+						"beta"
+					],
 					"children": [
 						{
 							"title": "Coder Desktop connect and sync",
 							"description": "Use Coder Desktop to manage your workspace code and files locally",
 							"path": "./user-guides/desktop/desktop-connect-sync.md",
-							"state": ["beta"]
+							"state": [
+								"beta"
+							]
 						}
 					]
 				},
@@ -294,19 +302,25 @@
 					"description": "Run containerized development environments in your Coder workspace using the dev containers specification.",
 					"path": "./user-guides/devcontainers/index.md",
 					"icon_path": "./images/icons/container.svg",
-					"state": ["early access"],
+					"state": [
+						"early access"
+					],
 					"children": [
 						{
 							"title": "Working with dev containers",
 							"description": "Access dev containers via SSH, your IDE, or web terminal.",
 							"path": "./user-guides/devcontainers/working-with-dev-containers.md",
-							"state": ["early access"]
+							"state": [
+								"early access"
+							]
 						},
 						{
 							"title": "Troubleshooting dev containers",
 							"description": "Diagnose and resolve common issues with dev containers in your Coder workspace.",
 							"path": "./user-guides/devcontainers/troubleshooting-dev-containers.md",
-							"state": ["early access"]
+							"state": [
+								"early access"
+							]
 						}
 					]
 				},
@@ -334,7 +348,9 @@
 							"title": "Appearance",
 							"description": "Learn how to configure the appearance of Coder",
 							"path": "./admin/setup/appearance.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Telemetry",
@@ -430,25 +446,33 @@
 							"title": "Groups \u0026 Roles",
 							"description": "Manage access control with user groups and role-based permissions for Coder resources",
 							"path": "./admin/users/groups-roles.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "IdP Sync",
 							"description": "Synchronize user groups, roles, and organizations from your identity provider to Coder",
 							"path": "./admin/users/idp-sync.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Organizations",
 							"description": "Segment and isolate resources by creating separate organizations for different teams or projects",
 							"path": "./admin/users/organizations.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Quotas",
 							"description": "Control resource usage by implementing workspace budgets and credit-based cost management",
 							"path": "./admin/users/quotas.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Sessions \u0026 API Tokens",
@@ -536,7 +560,10 @@
 									"title": "Prebuilt workspaces",
 									"description": "Pre-provision a ready-to-deploy workspace with a defined set of parameters",
 									"path": "./admin/templates/extending-templates/prebuilt-workspaces.md",
-									"state": ["premium", "beta"]
+									"state": [
+										"premium",
+										"beta"
+									]
 								},
 								{
 									"title": "Icons",
@@ -607,13 +634,17 @@
 									"title": "Configure a template for dev containers",
 									"description": "How to use configure your template for dev containers",
 									"path": "./admin/templates/extending-templates/devcontainers.md",
-									"state": ["early access"]
+									"state": [
+										"early access"
+									]
 								},
 								{
 									"title": "Process Logging",
 									"description": "Log workspace processes",
 									"path": "./admin/templates/extending-templates/process-logging.md",
-									"state": ["premium"]
+									"state": [
+										"premium"
+									]
 								}
 							]
 						},
@@ -626,7 +657,9 @@
 							"title": "Permissions \u0026 Policies",
 							"description": "Learn how to create templates with Terraform",
 							"path": "./admin/templates/template-permissions.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Troubleshooting Templates",
@@ -640,13 +673,17 @@
 					"description": "Learn how to run external provisioners with Coder",
 					"path": "./admin/provisioners/index.md",
 					"icon_path": "./images/icons/key.svg",
-					"state": ["premium"],
+					"state": [
+						"premium"
+					],
 					"children": [
 						{
 							"title": "Manage Provisioner Jobs",
 							"description": "Learn how to run external provisioners with Coder",
 							"path": "./admin/provisioners/manage-provisioner-jobs.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						}
 					]
 				},
@@ -729,13 +766,17 @@
 							"title": "Workspace Proxies",
 							"description": "Run geo distributed workspace proxies",
 							"path": "./admin/networking/workspace-proxies.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "High Availability",
 							"description": "Learn how to configure Coder for High Availability",
 							"path": "./admin/networking/high-availability.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Troubleshooting",
@@ -794,7 +835,9 @@
 							"title": "Audit Logs",
 							"description": "Audit actions taken inside Coder",
 							"path": "./admin/security/audit-logs.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Secrets",
@@ -805,7 +848,9 @@
 							"title": "Database Encryption",
 							"description": "Encrypt the database to prevent unauthorized access",
 							"path": "./admin/security/database-encryption.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						}
 					]
 				},
@@ -822,60 +867,77 @@
 			"description": "Learn how to run and integrate agentic AI coding agents like GPT-Code, OpenDevin, or SWE-Agent in Coder workspaces to boost developer productivity.",
 			"path": "./ai-coder/index.md",
 			"icon_path": "./images/icons/wand.svg",
-			"state": ["beta"],
 			"children": [
 				{
-					"title": "Learn about coding agents",
-					"description": "Learn about the different agentic AI agents and their tradeoffs",
-					"path": "./ai-coder/agents.md"
+					"title": "Use Cases",
+					"description": "./use-cases.md",
+					"path": "./ai-coder/use-cases.md"
 				},
 				{
-					"title": "Create a Coder template for agents",
-					"description": "Create a purpose-built template for your agentic AI agents",
-					"path": "./ai-coder/create-template.md",
-					"state": ["beta"]
+					"title": "In the IDE",
+					"description": "./ide-agents.md",
+					"path": "./ai-coder/ide-agents.md",
+					"state": [
+						"beta"
+					]
 				},
 				{
-					"title": "Integrate with your issue tracker",
-					"description": "Assign tickets to agentic AI agents and interact via code reviews",
-					"path": "./ai-coder/issue-tracker.md",
-					"state": ["beta"]
-				},
-				{
-					"title": "Model Context Protocols (MCP) and adding AI tools",
-					"description": "Improve results by adding tools to your agentic AI agents",
-					"path": "./ai-coder/best-practices.md",
-					"state": ["beta"]
-				},
-				{
-					"title": "Supervise agents via Coder UI",
-					"description": "Interact with agentic agents via the Coder UI",
-					"path": "./ai-coder/coder-dashboard.md",
-					"state": ["beta"]
-				},
-				{
-					"title": "Supervise agents via the IDE",
-					"description": "Interact with agentic agents via VS Code or Cursor",
-					"path": "./ai-coder/ide-integration.md",
-					"state": ["beta"]
-				},
-				{
-					"title": "Programmatically manage agents",
-					"description": "Manage agentic agents via MCP, the Coder CLI, and/or REST API",
-					"path": "./ai-coder/headless.md",
-					"state": ["beta"]
-				},
-				{
-					"title": "Securing agents in Coder",
-					"description": "Learn how to secure agentic agents with boundaries",
-					"path": "./ai-coder/securing.md",
-					"state": ["early access"]
-				},
-				{
-					"title": "Custom agents",
-					"description": "Learn how to use custom agentic agents with Coder",
-					"path": "./ai-coder/custom-agents.md",
-					"state": ["beta"]
+					"title": "Coder Tasks",
+					"description": "./tasks.md",
+					"path": "./ai-coder/tasks.md",
+					"state": [
+						"beta"
+					],
+					"children": [
+						{
+							"title": "Best Practices",
+							"description": "Best practices running Coder Tasks, with productivity and security perspectives",
+							"path": "./ai-coder/coming-soon.md",
+							"state": [
+								"beta"
+							]
+						},
+						{
+							"title": "LLM Providers",
+							"description": "Run Coder Tasks with LLM Providers such as AWS Bedrock and GCP Vertex AI",
+							"path": "./ai-coder/coming-soon.md",
+							"state": [
+								"beta"
+							]
+						},
+						{
+							"title": "MCP Servers",
+							"description": "Install and run MCP Servers with Coder Tasks",
+							"path": "./ai-coder/coming-soon.md",
+							"state": [
+								"beta"
+							]
+						},
+						{
+							"title": "Security Considerations",
+							"description": "Securty Considerations running Coder Tasks",
+							"path": "./ai-coder/coming-soon.md",
+							"state": [
+								"beta"
+							]
+						},
+						{
+							"title": "Architecture Considerations",
+							"description": "Architecture Considerations running Coder Tasks",
+							"path": "./ai-coder/coming-soon.md",
+							"state": [
+								"beta"
+							]
+						},
+						{
+							"title": "Custom Agents",
+							"description": "Run custom agents with Coder Tasks",
+							"path": "./ai-coder/custom-agents.md",
+							"state": [
+								"beta"
+							]
+						}
+					]
 				}
 			]
 		},
