--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -766,6 +766,12 @@
 							"path": "./admin/monitoring/health-check.md"
 						},
 						{
+							"title": "Connection Logs",
+							"description": "Monitor connections to workspaces",
+							"path": "./admin/monitoring/connection-logs.md",
+							"state": ["premium"]
+						},
+						{
 							"title": "Notifications",
 							"description": "Configure notifications for your deployment",
 							"path": "./admin/monitoring/notifications/index.md",
