fix stray commas

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -296,12 +296,12 @@
 						{
 							"title": "Working with dev containers",
 							"description": "Access dev containers via SSH, your IDE, or web terminal.",
-							"path": "./user-guides/devcontainers/working-with-dev-containers.md",
+							"path": "./user-guides/devcontainers/working-with-dev-containers.md"
 						},
 						{
 							"title": "Troubleshooting dev containers",
 							"description": "Diagnose and resolve common issues with dev containers in your Coder workspace.",
-							"path": "./user-guides/devcontainers/troubleshooting-dev-containers.md",
+							"path": "./user-guides/devcontainers/troubleshooting-dev-containers.md"
 						}
 					]
 				},
@@ -601,7 +601,7 @@
 								{
 									"title": "Configure a template for dev containers",
 									"description": "How to use configure your template for dev containers",
-									"path": "./admin/templates/extending-templates/devcontainers.md",
+									"path": "./admin/templates/extending-templates/devcontainers.md"
 								},
 								{
 									"title": "Process Logging",
