--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,5 +1,7 @@
 {
-	"versions": ["main"],
+	"versions": [
+		"main"
+	],
 	"routes": [
 		{
 			"title": "About",
@@ -210,7 +212,9 @@
 									"title": "JetBrains Toolbox",
 									"description": "Access Coder workspaces from JetBrains Toolbox",
 									"path": "./user-guides/workspace-access/jetbrains/toolbox.md",
-									"state": ["beta"]
+									"state": [
+										"beta"
+									]
 								}
 							]
 						},
@@ -292,19 +296,25 @@
 					"description": "Run containerized development environments in your Coder workspace using the dev containers specification.",
 					"path": "./user-guides/devcontainers/index.md",
 					"icon_path": "./images/icons/container.svg",
-					"state": ["early access"],
+					"state": [
+						"early access"
+					],
 					"children": [
 						{
 							"title": "Working with dev containers",
 							"description": "Access dev containers via SSH, your IDE, or web terminal.",
 							"path": "./user-guides/devcontainers/working-with-dev-containers.md",
-							"state": ["early access"]
+							"state": [
+								"early access"
+							]
 						},
 						{
 							"title": "Troubleshooting dev containers",
 							"description": "Diagnose and resolve common issues with dev containers in your Coder workspace.",
 							"path": "./user-guides/devcontainers/troubleshooting-dev-containers.md",
-							"state": ["early access"]
+							"state": [
+								"early access"
+							]
 						}
 					]
 				},
@@ -332,7 +342,9 @@
 							"title": "Appearance",
 							"description": "Learn how to configure the appearance of Coder",
 							"path": "./admin/setup/appearance.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Telemetry",
@@ -428,25 +440,33 @@
 							"title": "Groups \u0026 Roles",
 							"description": "Manage access control with user groups and role-based permissions for Coder resources",
 							"path": "./admin/users/groups-roles.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "IdP Sync",
 							"description": "Synchronize user groups, roles, and organizations from your identity provider to Coder",
 							"path": "./admin/users/idp-sync.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Organizations",
 							"description": "Segment and isolate resources by creating separate organizations for different teams or projects",
 							"path": "./admin/users/organizations.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Quotas",
 							"description": "Control resource usage by implementing workspace budgets and credit-based cost management",
 							"path": "./admin/users/quotas.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Sessions \u0026 API Tokens",
@@ -534,7 +554,10 @@
 									"title": "Prebuilt workspaces",
 									"description": "Pre-provision a ready-to-deploy workspace with a defined set of parameters",
 									"path": "./admin/templates/extending-templates/prebuilt-workspaces.md",
-									"state": ["premium", "beta"]
+									"state": [
+										"premium",
+										"beta"
+									]
 								},
 								{
 									"title": "Icons",
@@ -605,13 +628,17 @@
 									"title": "Configure a template for dev containers",
 									"description": "How to use configure your template for dev containers",
 									"path": "./admin/templates/extending-templates/devcontainers.md",
-									"state": ["early access"]
+									"state": [
+										"early access"
+									]
 								},
 								{
 									"title": "Process Logging",
 									"description": "Log workspace processes",
 									"path": "./admin/templates/extending-templates/process-logging.md",
-									"state": ["premium"]
+									"state": [
+										"premium"
+									]
 								}
 							]
 						},
@@ -624,7 +651,9 @@
 							"title": "Permissions \u0026 Policies",
 							"description": "Learn how to create templates with Terraform",
 							"path": "./admin/templates/template-permissions.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Troubleshooting Templates",
@@ -638,13 +667,17 @@
 					"description": "Learn how to run external provisioners with Coder",
 					"path": "./admin/provisioners/index.md",
 					"icon_path": "./images/icons/key.svg",
-					"state": ["premium"],
+					"state": [
+						"premium"
+					],
 					"children": [
 						{
 							"title": "Manage Provisioner Jobs",
 							"description": "Learn how to run external provisioners with Coder",
 							"path": "./admin/provisioners/manage-provisioner-jobs.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						}
 					]
 				},
@@ -727,13 +760,17 @@
 							"title": "Workspace Proxies",
 							"description": "Run geo distributed workspace proxies",
 							"path": "./admin/networking/workspace-proxies.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "High Availability",
 							"description": "Learn how to configure Coder for High Availability",
 							"path": "./admin/networking/high-availability.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Troubleshooting",
@@ -792,7 +829,9 @@
 							"title": "Audit Logs",
 							"description": "Audit actions taken inside Coder",
 							"path": "./admin/security/audit-logs.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						},
 						{
 							"title": "Secrets",
@@ -803,7 +842,9 @@
 							"title": "Database Encryption",
 							"description": "Encrypt the database to prevent unauthorized access",
 							"path": "./admin/security/database-encryption.md",
-							"state": ["premium"]
+							"state": [
+								"premium"
+							]
 						}
 					]
 				},
@@ -823,25 +864,29 @@
 			"children": [
 				{
 					"title": "Best Practices",
-					"description": "./best-practices.md",
+					"description": "Best Practices running Coding Agents",
 					"path": "./ai-coder/best-practices.md"
 				},
 				{
 					"title": "In the IDE",
-					"description": "./ide-agents.md",
+					"description": "Run IDE agents with Coder",
 					"path": "./ai-coder/ide-agents.md"
 				},
 				{
 					"title": "Coder Tasks",
-					"description": "./tasks.md",
+					"description": "Run Coding Agents on your Own Infrastructure",
 					"path": "./ai-coder/tasks.md",
-					"state": ["beta"],
+					"state": [
+						"beta"
+					],
 					"children": [
 						{
 							"title": "Custom Agents",
 							"description": "Run custom agents with Coder Tasks",
 							"path": "./ai-coder/custom-agents.md",
-							"state": ["beta"]
+							"state": [
+								"beta"
+							]
 						},
 						{
 							"title": "Security \u0026 Boundaries",
@@ -849,6 +894,12 @@
 							"path": "./ai-coder/security.md"
 						}
 					]
+				},
+				{
+					"title": "MCP Server",
+					"description": "Connect to agents Coder with a MCP server",
+					"path": "./ai-coder/mcp-server.md",
+					"state": ["beta"]
 				}
 			]
 		},
