--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -342,6 +342,24 @@ jobs:
       - name: Delete Windows EV Signing Cert
         run: rm /tmp/ev_cert.pem
 
+      - name: Sign binaries with GPG
+        run: |
+          set -euo pipefail
+
+          for binary in ./build/coder_{darwin,linux,windows}*; do
+            if [[ -f "$binary" ]]; then
+              ./scripts/sign_with_gpg.sh "$binary"
+            fi
+          done
+        env:
+          CODER_GPG_RELEASE_KEY_BASE64: ${{ secrets.CODER_GPG_RELEASE_KEY_BASE64 }}
+
+      - name: Insert signatures
+        run: |
+          for sigfile in ./build/*.sig; do
+            mv "$sigfile" ./site/out/bin/
+          done
+
       - name: Determine base image tag
         id: image-base-tag
         run: |
