--- a/.github/workflows/nightly-gauntlet.yaml
+++ b/.github/workflows/nightly-gauntlet.yaml
@@ -14,9 +14,7 @@ jobs:
   test-go-pg:
     # make sure to adjust NUM_PARALLEL_PACKAGES and NUM_PARALLEL_TESTS below
     # when changing runner sizes
-    runs-on: ${{ matrix.os == 'ubuntu-latest' && github.repository_owner == 'coder' && 'depot-ubuntu-22.04-8' || matrix.os && matrix.os == 'macos-latest' && github.repository_owner == 'coder' && 'depot-macos-latest' || matrix.os == 'windows-2022' && github.repository_owner == 'coder' && 'depot-windows-2022-16' || matrix.os }}
-    needs: changes
-    if: needs.changes.outputs.go == 'true' || needs.changes.outputs.ci == 'true' || github.ref == 'refs/heads/main'
+    runs-on: ${{ matrix.os == 'macos-latest' && github.repository_owner == 'coder' && 'depot-macos-latest' || matrix.os == 'windows-2022' && github.repository_owner == 'coder' && 'depot-windows-2022-16' || matrix.os }}
     # This timeout must be greater than the timeout set by `go test` in
     # `make test-postgres` to ensure we receive a trace of running
     # goroutines. Setting this to the timeout +5m should work quite well
@@ -25,7 +23,6 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
           - macos-latest
           - windows-2022
     steps:
@@ -55,17 +52,6 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Setup Go Paths
-        id: go-paths
-        uses: ./.github/actions/setup-go-paths
-
-      - name: Download Go Build Cache
-        id: download-go-build-cache
-        uses: ./.github/actions/test-cache/download
-        with:
-          key-prefix: test-go-build-${{ runner.os }}-${{ runner.arch }}
-          cache-path: ${{ steps.go-paths.outputs.cached-dirs }}
-
       - name: Setup Go
         uses: ./.github/actions/setup-go
         with:
@@ -73,17 +59,9 @@ jobs:
           # download the toolchain configured in go.mod, so we don't
           # need to reinstall it. It's faster on Windows runners.
           use-preinstalled-go: ${{ runner.os == 'Windows' }}
-          # Cache is already downloaded above
-          use-cache: false
 
       - name: Setup Terraform
         uses: ./.github/actions/setup-tf
-
-      - name: Download Test Cache
-        id: download-cache
-        uses: ./.github/actions/test-cache/download
-        with:
-          key-prefix: test-go-pg-${{ runner.os }}-${{ runner.arch }}
 
       - name: Setup Embedded Postgres Cache Paths
         id: embedded-pg-cache
@@ -95,15 +73,6 @@ jobs:
         with:
           key-prefix: embedded-pg-${{ runner.os }}-${{ runner.arch }}
           cache-path: ${{ steps.embedded-pg-cache.outputs.cached-dirs }}
-
-      - name: Normalize File and Directory Timestamps
-        shell: bash
-        # Normalize file modification timestamps so that go test can use the
-        # cache from the previous CI run. See https://github.com/golang/go/issues/58571
-        # for more details.
-        run: |
-          find . -type f ! -path ./.git/\*\* | mtimehash
-          find . -type d ! -path ./.git/\*\* -exec touch -t 200601010000 {} +
 
       - name: Test with PostgreSQL Database
         env:
@@ -163,40 +132,12 @@ jobs:
             NUM_PARALLEL_TESTS=8
           fi
 
-          # by default, run tests with cache
-          TESTCOUNT=""
-          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            # on main, run tests without cache
-            TESTCOUNT="-count=1"
-          fi
+          # run tests without cache
+          TESTCOUNT="-count=1"
 
-          TEST_RETRIES="--rerun-fails=2 --rerun-fails-max-failures=50"
-          if [ "${{ github.ref }}" == "refs/heads/hugodutka/disable-test-retries-on-main" ]; then
-            # on main, run tests without retries
-            TEST_RETRIES=""
-          fi
-
-          mkdir -p "$RUNNER_TEMP/sym"
-          source scripts/normalize_path.sh
-          # terraform gets installed in a random directory, so we need to normalize
-          # the path to the terraform binary or a bunch of cached tests will be
-          # invalidated. See scripts/normalize_path.sh for more details.
-          normalize_path_with_symlinks "$RUNNER_TEMP/sym" "$(dirname $(which terraform))"
-
-          DB=ci gotestsum $TEST_RETRIES \
+          DB=ci gotestsum \
             --format standard-quiet --packages "./..." \
             -- -timeout=20m -v -p $NUM_PARALLEL_PACKAGES -parallel=$NUM_PARALLEL_TESTS $TESTCOUNT
-
-      - name: Upload Go Build Cache
-        uses: ./.github/actions/test-cache/upload
-        with:
-          cache-key: ${{ steps.download-go-build-cache.outputs.cache-key }}
-          cache-path: ${{ steps.go-paths.outputs.cached-dirs }}
-
-      - name: Upload Test Cache
-        uses: ./.github/actions/test-cache/upload
-        with:
-          cache-key: ${{ steps.download-cache.outputs.cache-key }}
 
       - name: Upload Embedded Postgres Cache
         uses: ./.github/actions/embedded-pg-cache/upload
