--- a/site/package.json
+++ b/site/package.json
@@ -93,6 +93,7 @@
 		"lodash": "4.17.21",
 		"lucide-react": "0.474.0",
 		"monaco-editor": "0.52.0",
+		"partysocket": "1.1.4",
 		"pretty-bytes": "6.1.1",
 		"react": "18.3.1",
 		"react-color": "2.19.3",
@@ -190,7 +191,11 @@
 		"vite-plugin-checker": "0.9.3",
 		"vite-plugin-turbosnap": "1.0.3"
 	},
-	"browserslist": ["chrome 110", "firefox 111", "safari 16.0"],
+	"browserslist": [
+		"chrome 110",
+		"firefox 111",
+		"safari 16.0"
+	],
 	"resolutions": {
 		"optionator": "0.9.3",
 		"semver": "7.6.2"
