--- a/site/package.json
+++ b/site/package.json
@@ -120,6 +120,7 @@
 		"undici": "6.21.2",
 		"unique-names-generator": "4.7.1",
 		"uuid": "9.0.1",
+		"websocket-ts": "2.2.1",
 		"yup": "1.6.1"
 	},
 	"devDependencies": {
