--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1767,6 +1767,11 @@
 					]
 				}
 			]
+		},
+		{
+			"title": "Coder Registry",
+			"description": "A collection of Templates and Modules used to create and extend Coder workspaces.",
+			"path": "./registry/index.md"
 		}
 	]
 }
