--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,7 +47,20 @@ jobs:
       # Required for GitHub Actions attestation
       attestations: write
 
-    steps:  
+    steps:
+        - name: Checkout
+          uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+          with:
+            fetch-depth: 0
+
+        # If the event that triggered the build was an annotated tag (which our
+        # tags are supposed to be), actions/checkout has a bug where the tag in
+        # question is only a lightweight tag and not a full annotated tag. This
+        # command seems to fix it.
+        # https://github.com/actions/checkout/issues/290
+        - name: Fetch git tags
+          run: git fetch --tags --force
+
         - name: Authenticate to Google Cloud
           id: gcloud_auth
           uses: google-github-actions/auth@ba79af03959ebeac9769e648f473a284504d9193 # v2.1.10
