chore: disable review status in CodeRabbit config
Change-Id: I0ee266e0b284832b65762a4f7a3f26d56af53e86
Signed-off-by: Thomas Kosiewski <tk@coder.com>

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -15,14 +15,14 @@ reviews:
   # Other review settings (only apply if manually requested)
   profile: "chill"
   request_changes_workflow: false
-  high_level_summary: true
+  high_level_summary: false
   poem: false
-  review_status: true
+  review_status: false
   collapse_walkthrough: true
+  high_level_summary_in_walkthrough: true
 
 chat:
   auto_reply: true # Allow automatic chat replies
 
 # Note: With auto_review.enabled: false, CodeRabbit will only perform initial
 # reviews when manually requested, but incremental reviews and chat replies remain enabled
-
