--- a/site/package.json
+++ b/site/package.json
@@ -185,11 +185,7 @@
 		"vite-plugin-turbosnap": "1.0.3",
 		"@storybook/addon-docs": "9.0.17"
 	},
-	"browserslist": [
-		"chrome 110",
-		"firefox 111",
-		"safari 16.0"
-	],
+	"browserslist": ["chrome 110", "firefox 111", "safari 16.0"],
 	"resolutions": {
 		"optionator": "0.9.3",
 		"semver": "7.6.2"
