--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -11,3 +11,9 @@ vpn/version.go @spikecurtis @johnstcn
 # This caching code is particularly tricky, and one must be very careful when
 # altering it.
 coderd/files/ @aslilac
+
+coderd/dynamicparameters/ @Emyrk
+coderd/rbac/ @Emyrk
+
+# Mainly dependent on coder/guts, which is maintained by @Emyrk
+scripts/apitypings/ @Emyrk
